[project]
name = "glomerular-classification"
version = "1.0.0"
description = "Classification of glomerular morphology patterns in PAS-stained kidney biopsies"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
glom-train = "src.cli.train:main"
glom-evaluate = "src.cli.evaluate:main"
glom-cam = "src.cli.generate_cam:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001"]  # Unused function arguments OK in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "timm.*",
    "sklearn.*",
    "PIL.*",
    "matplotlib.*",
    "seaborn.*",
    "tqdm.*",
    "pytorch_grad_cam.*",
    "transformers.*",
]
ignore_missing_imports = true


